prevented horizontial overflow on body tag

--- a/src/default.css
+++ b/src/default.css
@@ -8,7 +8,8 @@ body {
     margin: 0;
     background-color: var(--nord6);
 	transition-duration: var(--default--transition);
-	transition-property: color, background-color
+	transition-property: color, background-color;
+	overflow-x: hidden;
 }
 a {
     text-decoration: none
